      migrating.

    - Replaced the individual colorspace methods with $pdf->colorspace.  Added
      documentation and examples for the various colorspace types except for the
      former colorspace_hue, because I couldn't find the standard that it
      implements (if one exists).

    - Renamed $content->advancewidth() to $content->text_width().

    - In PDF::API2::Content, replaced image and formimage with place.  Added a
      $page->place() convenience method that is equivalent to $page->gfx->place.

    - Tentatively deprecated $pdf->cjkfont.  If you're successfully using this
      method for CJK font support, read PDF::API2::Resource::CIDFont::CJKFont
      and contact me to discuss your use case.

    - Tentatively deprecated $pdf->unifont.  If you're successfully using this
      method for Unicode support, please contact me to discuss your use case.

    - Replaced $pdf->preferences() with separate page_mode, page_layout,
      viewer_preferences, and open_action methods, all of which are now fully
      documented.

    - Added font_path and set_font_path accessors for the font search path (the
      list of directories searched when a font name is included without its full
      path).  Renamed addFontDirs to add_to_font_path.

    - Removed C:/WinNT/Fonts from the default font search path.

    - Named Destinations are now fully documented, with updated method names and
      arguments.

    - Outlines are now fully documented, with additional methods for examining
      and modifying the outline tree.  Existing method names and arguments have
      been updated to match those used in Named Destinations.  Various bugs have
      been fixed when reading or modifying outlines in existing PDFs.

    - Updated annotation documentation.  Revised methods and arguments to match
      those used in Named Destinations and Outlines.

    - A PDF version number specified in the document catalog is now respected by
      $pdf->version().

